Se agrega ruta para la gestión de admisiones
